--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,8 +32,12 @@ akka {
   #
   # And then uncomment this line to debug the configuration.
   #
-  #log-config-on-start = true
+  #log-config-on-start =
+  log-dead-letters = 100
+  log-dead-letters-during-shutdown = on
 }
+
+bounded-mailbox { mailbox-type = "akka.dispatch.NonBlockingBoundedMailbox", mailbox-capacity = 100 }
 
 ## Secret key
 # http://www.playframework.com/documentation/latest/ApplicationSecret
@@ -351,3 +355,8 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+
+
+
+play.modules.enabled += "modules.MyModule"
